# LiDIA

./: .docker-build.sh  .gitignore  .travis-build.sh  .travis.yml  COPYING  ChangeLog  LiDIA.h.in  LiDIA.spec  LiDIA.spec.in  Makefile.am  Makefile.in  NEWS  Paths.def  README  TODO  acinclude.m4  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  path.h.in
doc/: Fp_poly_modulus.tex  Fp_polynomial.tex  Fp_rational_function.tex  LiDIA.bib  LiDIA.def  LiDIA.ist  LiDIA.tex  LiDIA_EC.tex  LiDIA_ECO.tex  LiDIA_FF.tex  LiDIA_GEC.tex  LiDIA_LA.tex  LiDIA_LT.tex  LiDIA_NF.tex  LiDIA_base.tex  Makefile.am  Makefile.in  alg_number.tex  base_matrix.tex  base_vector.tex  basic_error.tex  big_polynomial.tex  bigcomplex.tex  bigfloat.tex  bigfloat_lattice.tex  bigint.tex  bigint_lattice.tex  bigint_matrix.tex  bigmod.tex  bigmod_matrix.tex  bigrational.tex  cast_error.tex  color.cfg  copyright.tex  crt.tex  curve_isomorphism.tex  eco_prime.tex  elliptic_curve.tex  elliptic_curve_bigint.tex  elliptic_curve_flags.tex  (+66 more)
examples/: Makefile.am  Makefile.in
examples/base/: Makefile.am  Makefile.in
examples/ec_order/: Makefile.am  Makefile.in  test_meq_prime.cc
examples/elliptic_curves/: Makefile.am  Makefile.in
examples/finite_fields/: Makefile.am  Makefile.in
examples/gec/: Makefile.am  Makefile.in
examples/lattices/: Makefile.am  Makefile.in
examples/linear_algebra/: Makefile.am  Makefile.in
examples/number_fields/: Makefile.am  Makefile.in
include/: bytes_to_int_flag.h
share/LiDIA/: GF2n.database  LIDIA_PRIMES
share/LiDIA/Discriminants/: h_1  h_10  h_100  h_101  h_102  h_103  h_104  h_105  h_106  h_107  h_108  h_109  h_11  h_110  h_111  h_112  h_113  h_114  h_115  h_116  h_117  h_118  h_119  h_12  h_120  h_121  h_122  h_123  h_124  h_125  h_126  h_127  h_128  h_129  h_13  h_130  h_131  h_132  h_133  h_134  (+959 more)
share/LiDIA/MOD_EQ/: meq101  meq103_II  meq107  meq109  meq11  meq113  meq127  meq13  meq131  meq137_II  meq139  meq149  meq151  meq157  meq163  meq167_II  meq17  meq173  meq179_II  meq181  meq19  meq191_II  meq193  meq197  meq199  meq211  meq223  meq227_II  meq229  meq23  meq233  meq239_II  meq241  meq251_II  meq257_II  meq263_II  meq269_II  meq271  meq277  meq281_II  (+21 more)
share/LiDIA/MOD_EQ_2/: meq_2_101  meq_2_103  meq_2_107  meq_2_109  meq_2_11  meq_2_113  meq_2_127  meq_2_13  meq_2_131  meq_2_137  meq_2_139  meq_2_149  meq_2_151  meq_2_157  meq_2_163  meq_2_167  meq_2_17  meq_2_173  meq_2_179  meq_2_181  meq_2_19  meq_2_191  meq_2_193  meq_2_197  meq_2_199  meq_2_211  meq_2_223  meq_2_227  meq_2_229  meq_2_23  meq_2_233  meq_2_239  meq_2_241  meq_2_251  meq_2_257  meq_2_263  meq_2_269  meq_2_271  meq_2_277  meq_2_281  (+127 more)
src/base/factorization/: sf_bigint.cc
src/base/hash_table/: hash_table_appl.cc  indexed_hash_table_appl.cc
src/base/instantiate/: bm_bigint_dense.cc  bm_bigint_normal.cc  bm_bigint_sparse.cc  bm_bigint_sub.cc  bm_double_dense.cc  bm_double_normal.cc  bm_double_sparse.cc  bm_double_sub.cc  bm_int_dense.cc  bm_int_normal.cc  bm_int_sparse.cc  bm_int_sub.cc  bm_long_dense.cc  bm_long_normal.cc  bm_long_sparse.cc  bm_long_sub.cc  bpf_bigint.cc  bpf_bigmod.cc  bv_bigcomplex.cc  bv_bigfloat.cc  bv_bigint.cc  bv_bigmod.cc  bv_bigrational.cc  bv_char.cc  bv_double.cc  bv_int.cc  bv_long.cc  bv_param_desc_ptr.cc  bv_pp_sf_bigint.cc  bv_rf_single_factor.cc  bv_udigit_mod.cc  bv_xdouble.cc  fact_bigint.cc  fv_bigint.cc  fv_bigrational.cc  fv_double.cc  fv_int.cc  fv_long.cc  ht_bigint.cc  ht_int.cc  (+23 more)
src/base/matrix/: base_matrix_appl.cc  base_matrix_bigmod.cc  input_bigfloat  input_long  matrix_error_msg.cc  matrix_inst  sparse_input_int
src/base/misc/: power_functions_appl.cc
src/base/polynomial/: bigcomplex_polynomial.cc  bigfloat_polynomial.cc  bigint_polynomial.cc  bigrational_polynomial.cc  cast_bigcomplex_polynomial.cc  cast_bigfloat_polynomial.cc  cast_bigrational_polynomial.cc  jenkins_traub.cc  jenkins_traub_appl.cc  poly_error_msg.cc  polynomial_cast_appl.cc  resultant_check_appl.cc  test_roots.1  test_roots.1.cmp  test_roots_appl.cc
src/base/simple_classes/: matrix_GL2Z.cc
src/base/system/: debug.cc  error.cc  file_lidia.cc  info.cc  memory.cc  osstream.cc  param_desc.cc  param_desc_instant.cc  precondition_error.cc  precondition_error_instant.cc  random_generator.cc  random_generator_appl.cc  signal_lidia.cc  signal_lidia_appl.cc  timer.cc  timer_appl.cc  warning.cc
src/base/vector/: vector_appl.cc  vector_error_msg.cc
src/ec_order/instantiate/: bv_ff1.cc  bv_ff2.cc  bv_trace_mod.cc  bv_udigit.cc  pt_gf2n.cc  sv_trace_mod.cc  sv_udigit.cc
src/elliptic_curves/ec_finite_fields/: ec_gf_element_appl.cc  ec_point_gf_element_appl.cc  elliptic_curve_gf_element.cc  elliptic_curve_rep_gf_element.cc  point_gf_element.cc  point_operations_gf_element.cc
src/elliptic_curves/ec_rationals/: complex_periods.cc  complex_periods_appl.cc  curve_isomorphism_appl.cc  ec_arith.cc  ec_bigint_appl.cc  ec_bigint_test_appl.cc  ec_bigrational_appl.cc  elliptic_curve_bigint.cc  elliptic_curve_bigint_appl.cc  elliptic_curve_rep_bigint.cc  instant_curve_isomorphism.cc  instant_ec_bigint.cc  kodaira_code.cc  minimal_model.cc  minimal_model_appl.cc  point_bigint.cc  point_bigint_appl.cc  point_operations_bigint.cc  quartic.cc  quartic_appl.cc  reduction_type.cc  testit.sh
src/elliptic_curves/instantiate/: bv_point_bigint.cc  ec_bigrational.cc  (+1 more)
src/gec/: gec.cc  gec_appl.cc  is_cryptographically_strong.cc
src/lattices/: bf_basis.cc  bf_gsys_alg1.cc  bf_gsys_alg2.cc  bf_gsys_base.cc  bfl_alg1.cc  bfl_base.cc  bi_basis.cc  bi_gsys_alg1.cc  bi_gsys_alg2.cc  bi_gsys_alg3.cc  bi_gsys_base.cc  bil_alg1.cc  bil_alg2.cc  bil_alg3.cc  bil_base.cc  lattice_appl.cc  lattice_basis.cc  lattice_gensys.cc
src/linear_algebra/: bigfloat_matrix.cc  bigint_matrix.cc  bigint_matrix_appl.cc  bigmod_matrix.cc  crt_and_prime_handling.cc  field_matrix_appl.cc  file_adjoint.cc  hnf_instant.cc  instant_bigint_matrix.cc  m_multiple_gcd.cc  modular_instant.cc  ring_matrix_appl.cc  trans_matrix.cc
src/portability/: bytes_to_int_flag_generator.cc  random.c  random.h  stlport.cc
(+865 files in other folders)
